#508 [feat] 궁금해요 top 2 컨텐츠 부족 시 로직 구현
만일 이번 주 궁금해요 top 2 컨텐츠가 부족하다면, 기존의 글/ 작가의 total Curious Count에서 받아오는 것을 추가하도록 했습니다.